# blades_factions

./: .gitignore  Cargo.toml  README.md  i18n.toml
assets/text/en/: blades_factions.ftl
src/: action.rs  app.rs  app_data.rs  app_display.rs  app_settings.rs  child_windows.rs  clock.rs  district.rs  dots.rs  faction.rs  localize.rs  main.rs  managed_list.rs  person.rs  relationship.rs  sorting.rs  tier.rs  todo.rs
test_data/: template_json  test1.json
