[package]
name = "blades_factions"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui_extras = "0.31"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
directories-next = "2.0.0"
log = "0.4"
fern = "0.7"
# rmp_fs = "1.0"
pot = "3.0"
# binrw = "0.15"
fluent-templates = "0.13"
i18n-embed-fl = "0.9"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"]}
rust-embed = "8.2"
enum-iterator = "2.1"
